--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,9 @@ label{
 .span-2{
 	float: right;
 }
+.anim-typewriter{
+	margin-bottom: 50px !important;
+}
 #losgg{
 height: 100vh;
 height: 100% !important;
